# CMakeCMTests

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  ModulesList.cmake  README.md
.github/workflows/: TestsLinux.yml  TestsMacOS.yml  TestsWindows.yml
modules/: Breathe.cmake  C++Concepts.cmake  CLI11.cmake  CMakeFormat.cmake  CPM.cmake  ClangFormat.cmake  Colors.cmake  Common.cmake  ConfigurationCheck.cmake  CreateConfigurationTypes.cmake  DefaultConfigurations.cmake  DefaultInstallPrefix.cmake  Doctest.cmake  Doxygen.cmake  FindBreathe.cmake  FindFilesystem.cmake  FindGcov.cmake  FindLcov.cmake  FindPip.cmake  FindSphinx.cmake  Findpip.cmake  Fmt.cmake  Formatters.cmake  GitInfos.cmake  JSONParser.cmake  LCIO.cmake  Lcio.cmake  Messages.cmake  ModulesList.cmake  Ping.cmake  Pip.cmake  PreventInSourceBuilds.cmake  Python.cmake  README.md  SIO.cmake  SourceFileUtils.cmake  Spdlog.cmake  Sphinx.cmake  Standards.cmake  Testings.cmake  (+1 more)
tests/: CMakeLists.txt
tests/units/to_build/CLI11/: CMakeLists.txt  TestCLI11.cpp
tests/units/to_build/CMakeRC/: CMakeLists.txt
tests/units/to_build/Codecov/: CMakeLists.txt
tests/units/to_build/Doctest/: CMakeLists.txt  Factorial.cpp
tests/units/to_build/DownloadCMakeCM/: CMakeLists.txt
tests/units/to_build/FindFilesystem/: CMakeLists.txt
tests/units/to_build/FindFilesystem/Either/: CMakeLists.txt
tests/units/to_build/FindFilesystem/Experimental/: CMakeLists.txt
tests/units/to_build/FindFilesystem/Final/: CMakeLists.txt
tests/units/to_build/FindFilesystem/MaybeFail/: CMakeLists.txt
tests/units/to_build/JSONParser/: CMakeLists.txt  myexe.cpp  test.json
tests/units/to_configure/CPM/: CMakeLists.txt
tests/units/to_configure/Colors/: CMakeLists.txt
tests/units/to_configure/DefaultInstallPrefix/: CMakeLists.txt
tests/units/to_configure/Ping/: CMakeLists.txt
tests/units/to_configure/Testings/: CMakeLists.txt
